bootstrap/kubernetes/apps/media/maintainerr/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: maintainerr
  name: maintainerr
  namespace: media
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      run: maintainerr
  template:
    metadata:
      labels:
        run: maintainerr
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - env:
            - name: TZ
              value: "America/Argentina/Cordoba"
          image: maintainerr/maintainerr:3.30.0
          name: maintainerr
          resources:
            requests:
              cpu: 15m
              memory: 192Mi
            limits:
              cpu: 50m
              memory: 210Mi
          ports:
            - containerPort: 6246
              name: webui
          volumeMounts:
            - name: data
              mountPath: /opt/data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: maintainerr-data
