bootstrap/kubernetes/apps/media/maintainerr/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: maintainerr
  namespace: media
spec:
  type: ClusterIP
  ports:
    - port: 6246
      protocol: TCP
      targetPort: 6246
      name: webui
  selector:
    run: maintainerr
